# dataframe

./: CHANGELOG.md  dataframe.cabal
docs/: coming_from_other_implementations.md  cookbook.md  dataframes_in_haskell.md  intro_to_probability_and_data.md  persistent_integration.md  tutorial.md
examples/: Chipotle.hs  OneBillionRowChallenge.hs
src/DataFrame/: Functions.hs  Synthesis.hs
src/DataFrame/Display/Web/: Plot.hs
src/DataFrame/IO/: CSV.hs  JSON.hs
src/DataFrame/Internal/: Expression.hs  Row.hs
src/DataFrame/Operations/: Aggregation.hs  Join.hs  Permutation.hs  Statistics.hs  Typing.hs
tests/: Functions.hs
tests/Operations/: Aggregations.hs  Join.hs  Sort.hs
